Bug 990340 - Use GetContentInsertionFrame() when searching for ::before/::after frames.  r=bz